Add offhand swap control action
